--- a/src/style/theme/components/_buttons.scss
+++ b/src/style/theme/components/_buttons.scss
@@ -20,5 +20,5 @@
 .btn-link {
     font-size: .875rem;
     --bs-link-color: #{$blue};
-    --bs-btn-hover-color: #{$blue};
+    --bs-btn-hover-color: #{$grey};
 }
